# ultimate-tic-tac-toe

./: .gitignore  NOTES.md  pyproject.toml
archive_code/game/: ttt.py  uttt.py
src/game/: __init__.py  tictactoe.py  ttt.py  ultimatetictactoe.py  uttt.py
src/mcts/: __init__.py  mcts.py
src/model/: __init__.py  components.py  model.py  model1.py  model2.py
